# aim-study

./: CMakeLists.txt  main2.cpp  output1.txt  output2.txt  package.xml
include/: coord_utils.hpp
results/: convert1.txt  convert2.txt  convert3.txt  convert4.txt  output3.txt  output4.txt  path.csv
src/: convert.py  convert2.py  coord_utils.cpp  main.cpp  main2.cpp  path.cpp  음.. 1.모라이에서 ego 데이터(utm) 받고 그것을 output.txt에 저장한 뒤에
