<package format="2">
  <name>yerin</name>
  <version>0.0.0</version>
  <description>Coordinate transform node</description>

  <maintainer email="you@example.com">your_name</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>morai_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>morai_msgs</exec_depend>

  <!-- ✅ GeographicLib 추가 -->
  <build_depend>geographiclib</build_depend>
  <exec_depend>geographiclib</exec_depend>

<build_depend>libgeographic-dev</build_depend>
<exec_depend>libgeographic-dev</exec_depend>

</package>
